Save dark mode choice in cookie

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.6.4",
     "gsap": "^3.2.6",
     "vue": "^2.6.11",
-    "vue-burger-menu": "^2.0.5"
+    "vue-burger-menu": "^2.0.5",
+    "vue-cookie": "^1.1.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
