--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "gsap": "^3.2.6",
+    "howler": "^2.1.3",
     "vue": "^2.6.11",
     "vue-burger-menu": "^2.0.5",
     "vue-cookie": "^1.1.4"
